<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PublishSongActivity"
    android:background="@color/neutral0"
    android:paddingRight="@dimen/spacing_16dp"
    android:paddingLeft="@dimen/spacing_16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/songImage"
            android:layout_width="@dimen/image_240dp"
            android:layout_height="@dimen/image_240dp"
            android:src="@drawable/cover_picture" />

        <EditText
            android:id="@+id/songNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_song_name"
            android:textSize="@dimen/font_display"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/spacing_12dp"
            android:textColor="@color/neutral5"
            android:gravity="center"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChooseAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_audio"
            android:backgroundTint="@color/primary"
            android:textColor="@color/neutral5"
            android:layout_marginTop="@dimen/spacing_12dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing_4dp"
            >
            <ImageView
                android:layout_width="@dimen/image_56dp"
                android:layout_height="@dimen/image_56dp"
                android:src="@drawable/cover_picture" />
            <TextView
                android:id="@+id/audioNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_song_file"
                android:textStyle="bold"
                android:textSize="@dimen/font_title"
                android:textColor="@color/neutral5"
                android:layout_marginLeft="@dimen/spacing_8dp"
                />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUploadSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_upload"
            android:backgroundTint="@color/primary"
            android:textColor="@color/neutral5"
            android:layout_marginTop="@dimen/spacing_12dp"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>